--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>상태 :</li>
             <li><span class="state end"></span></li>
             <li>완료</li>
-            <li><span class="state ing"></span></li>
+            <li><span class="state"></span></li>
             <li>진행중&nbsp;&nbsp;&nbsp;/</li>
             <li><span class="state modify"></span></li>
             <li>수정</li>
@@ -51,7 +51,7 @@
               <td>스타일가이드</td>
               <td><a href="./style.html" target="_blank">style.html</a></td>
               <td>2024.08.10</td>
-              <td>2024.00.00</td>
+              <td style="color:red;">이번주 과제!</td>
               <td>O</td>
               <td>O</td>
               <td>x</td>
@@ -60,6 +60,9 @@
               <td>
                 <p class="t_em"></p>
               </td>
+            </tr>
+            <tr>
+              <td class="category" colspan="10">home</td>
             </tr>
             <tr class="list">
               <td>home</td>
@@ -70,185 +73,241 @@
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>listing</td>
+              <td><a href="" target="_blank">listing.html</a></td>
+              <td>2024.00.00</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">Item detail</td>
+              <td class="category" colspan="10">splash</td>
             </tr>
             <tr class="list">
-              <td>Item detail > Detail_Sold</td>
-              <td><a href="" target="_blank">detailSold.html</a></td>
+              <td>splash</td>
+              <td><a href="" target="_blank">splash.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
-              <td>
-                <p class="t_em"></p>
-              </td>
-            </tr>
-            <tr class="list">
-              <td>Item detail > Detail_Auction</td>
-              <td><a href="" target="_blank">detailAuction.html</a></td>
-              <td>2024.00.00</td>
-              <td>2024.00.00</td>
-              <td>x</td>
-              <td>x</td>
-              <td>x</td>
-              <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
-              <td>
-                <p class="t_em"></p>
-              </td>
-            </tr>
-            <tr class="list">
-              <td>Item detail > Detail_Current bid</td>
-              <td><a href="" target="_blank">detailCurrentBid.html</a></td>
-              <td>2024.00.00</td>
-              <td>2024.00.00</td>
-              <td>x</td>
-              <td>x</td>
-              <td>x</td>
-              <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">Discover Creator</td>
+              <td class="category" colspan="10">onboarding screen</td>
             </tr>
             <tr class="list">
-              <td>Discover Creator</td>
-              <td><a href="" target="_blank">discoverCreator.html</a></td>
-              <td>2024.00.20</td>
+              <td>onboarding screen01</td>
+              <td><a href="" target="_blank">onboardingScreen01.html</a></td>
+              <td>2024.00.00</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>onboarding screen02</td>
+              <td><a href="" target="_blank">onboardingScreen02.html</a></td>
+              <td>2024.00.00</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>onboarding screen03</td>
+              <td><a href="" target="_blank">onboardingScreen03.html</a></td>
+              <td>2024.00.00</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">User Profile</td>
+              <td class="category" colspan="10">sign in</td>
             </tr>
             <tr class="list">
-              <td>User Profile</td>
-              <td><a href="" target="_blank">userProfile.html</a></td>
+              <td>login</td>
+              <td><a href="" target="_blank">login.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>register</td>
+              <td><a href="" target="_blank">register.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>profile</td>
+              <td><a href="" target="_blank">profile.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">search</td>
+              <td class="category" colspan="10">swiper list</td>
             </tr>
             <tr class="list">
-              <td>search</td>
-              <td><a href="" target="_blank">search.html</a></td>
+              <td>swiper</td>
+              <td><a href="" target="_blank">swiper.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">profile</td>
+              <td class="category" colspan="10">searching</td>
             </tr>
             <tr class="list">
-              <td>profile > my profile_empty</td>
-              <td><a href="" target="_blank">profileEmpty.html</a></td>
+              <td>searching</td>
+              <td><a href="" target="_blank">searching.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
-              <td>
-                <p class="t_em"></p>
-              </td>
-            </tr>
-            <tr class="list">
-              <td>profile >my profile_edit</td>
-              <td><a href="" target="_blank">profileEdit.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
-              <td>x</td>
-              <td>x</td>
-              <td>x</td>
-              <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">join Community</td>
+              <td class="category" colspan="10">property detail screen </td>
             </tr>
             <tr class="list">
-              <td>join Community</td>
-              <td><a href="" target="_blank">joiCommunity.html</a></td>
+              <td>description</td>
+              <td><a href="" target="_blank">description.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>gallery</td>
+              <td><a href="" target="_blank">gallery.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
+              <td>
+                <p class="t_em"></p>
+              </td>
+            </tr>
+            <tr class="list">
+              <td>review</td>
+              <td><a href="" target="_blank">review.html</a></td>
+              <td>2024.00.20</td>
+              <td>2024.00.00</td>
+              <td>x</td>
+              <td>x</td>
+              <td>x</td>
+              <td><span class="state m"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">About</td>
+              <td class="category" colspan="10">select booking type</td>
             </tr>
             <tr class="list">
-              <td>About</td>
-              <td><a href="" target="_blank">about.html</a></td>
+              <td>select booking</td>
+              <td><a href="" target="_blank">selectBooking.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr>
-              <td class="category" colspan="10">FAQ</td>
+              <td class="category" colspan="10">property review</td>
             </tr>
             <tr class="list">
-              <td>FAQ</td>
-              <td><a href="" target="_blank">faq.html</a></td>
+              <td>propertyReview</td>
+              <td><a href="" target="_blank">propertyReview.html</a></td>
               <td>2024.00.20</td>
               <td>2024.00.00</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
