--- a/style.html
+++ b/style.html
@@ -5,7 +5,280 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/guide.css">
 </head>
 <body>
+    <details>
+        <summary>기타 UI</summary>
+        <div>
+            <h2>rating</h2>
+            <div class="rating">4.9</div>
+        </div>
+    </details>
+
+    <details>
+        <summary>Text</summary>
+        <div>
+            <h2>heading-type</h2>
+            <h2 class="heading-type1">.heading-type1</h2>
+            <h2 class="heading-type2">.heading-type2</h2>
+
+            <h2>text-type</h2>
+            <div class="text-type1">.text-type1</div>
+            <div class="text-type2">.text-type2</div>
+            <div class="text-type3">.text-type3</div>
+            <div class="text-type4">.text-type4</div>
+            <div class="text-type5">.text-type5</div>
+        </div>
+    </details>
+
+    <details>
+        <summary>Tab</summary>
+        <div>
+            <h2>tab-type1</h2>
+            <nav class="tab-type1">
+                <ul>
+                    <li>
+                        <button class="--active">Recommended</button>
+                    </li>
+                    <li>
+                        <button>Top Rates</button>
+                    </li>
+                </ul>
+            </nav>
+
+            <h2>tab-type2</h2>
+            <nav class="tab-type2">
+                <ul>
+                    <li>
+                        <button class="--active">Description</button>
+                    </li>
+                    <li>
+                        <button>Description</button>
+                    </li>
+                    <li>
+                        <button>Description</button>
+                    </li>
+                </ul>
+            </nav>
+
+            <h2>tab-type3</h2>
+            <nav class="tab-type3">
+                <ul>
+                    <li>
+                        <button class="--active">All</button>
+                    </li>
+                    <li>
+                        <button>House</button>
+                    </li>
+                    <li>
+                        <button>All</button>
+                    </li>
+                    <li>
+                        <button>All</button>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </details>
+
+    <details>
+        <summary>List</summary>
+        <div>
+            <h2>list-type1</h2>
+            <ul class="list-type1">
+                <li>
+                    <a href="">
+                        <div class="list-type1__thumb">
+                            <img src="images/@thumbnail3.png" alt="">
+                        </div>
+                        <div class="list-type1__content">
+                            <div class="list-type1__text">
+                                <div class="text-type1">Lorem House</div>
+                                <div class="text-type2">$340/month</div>
+                                <div class="ico-location gray">Avenue, West Side</div>
+                            </div>
+                            <button class="btn-bookmark" aira-label="북마크에 저장"></button>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+
+            <h2>list-type2</h2>
+            <ul class="list-type2">
+                <li>
+                    <a href="">
+                        <div class="list-type2__thumb ico-wishlist">
+                            <img src="images/@thumbnail1.png" alt="">
+                        </div>
+                        <div class="list-type2__content">
+                            <div class="align vm both">
+                                <div class="rating">4.9</div>
+                                <div class="text-type4">Apartment</div>
+                            </div>
+                            <div class="text-type5 mt14">Woodland Apartment</div>
+                            <div class="ico-location blue mt7">1012 Ocean avanue, New yourk, USA</div>
+                            <div class="align vm both mt9">
+                                <div class="align gap4">
+                                    <div class="view">1,225</div>
+                                    <div class="bed">3.0</div>
+                                </div>
+                                <div class="text-type2">$340/month</div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+
+            <h2>list-type3</h2>
+            <ul class="list-type3 col2">
+                <li>
+                    <a href="">
+                        <div class="list-type3__thumb">
+                            <img src="images/@thumbnail3.png" alt="">
+                        </div>
+                        <div class="list-type3__content">
+                            <div class="list-type3__text">
+                                <div class="text-type1">Lorem House</div>
+                                <div class="text-type2 mt8">$340/month</div>
+                                <div class="ico-location gray">Avenue, West Side</div>
+                            </div>
+                            <button class="btn-bookmark" aira-label="북마크에 저장"></button>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="list-type3__thumb">
+                            <img src="images/@thumbnail3.png" alt="">
+                        </div>
+                        <div class="list-type3__content">
+                            <div class="list-type3__text">
+                                <div class="text-type1">Lorem House</div>
+                                <div class="text-type2 mt8">$340/month</div>
+                                <div class="ico-location gray">Avenue, West Side</div>
+                            </div>
+                            <button class="btn-bookmark" aira-label="북마크에 저장"></button>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+
+            <h2>list-type4</h2>
+            <ul class="list-type4">
+                <li>
+                    <div class="list-type4__bg bed"></div>
+                    <div class="list-type4__count">1,225</div>
+                    <div class="list-type4__category">sqft</div>
+                </li>
+                <li>
+                    <div class="list-type4__bg bed"></div>
+                    <div class="list-type4__count">1,225</div>
+                    <div class="list-type4__category">sqft</div>
+                </li>
+                <li>
+                    <div class="list-type4__bg bed"></div>
+                    <div class="list-type4__count">1,225</div>
+                    <div class="list-type4__category">sqft</div>
+                </li>
+                <li>
+                    <div class="list-type4__bg bed"></div>
+                    <div class="list-type4__count">1,225</div>
+                    <div class="list-type4__category">sqft</div>
+                </li>
+            </ul>
+
+            <h2>list-type5</h2>
+            <ul class="list-type5">
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Swimming1111111111111</div>
+                </li>
+                <li>
+                    <div class="list-type5__bg car"></div>
+                    <div class="list-type5__desc">Car Parking</div>
+                </li>
+            </ul>
+        </div>
+    </details>
+
+    <details open>
+        <summary>Form</summary>
+        <div>
+            <h2>radio</h2>
+            <input type="radio" checked name="radio" class="radio-type1" id="radio1-1"><label for="radio1-1">선택1</label> <br/>
+            <input type="radio" name="radio" class="radio-type1" id="radio1-2"><label for="radio1-2">선택2</label>
+
+            <h2>radio 그룹</h2>
+            <div class="radio-group1">
+                <input type="radio" checked name="radio" class="radio-type1" id="radio2-1"><label for="radio2-1">선택1</label>
+                <input type="radio" name="radio" class="radio-type1" id="radio2-2"><label for="radio2-2">선택2</label>
+                <input type="radio" name="radio" class="radio-type1" id="radio2-3"><label for="radio2-3">선택2</label>
+            </div>
+            <div class="radio-group2">
+                <p style="color:red; font-weight:bold; font-size:1.6rem;">label로 연결을 해놓았는데 input부분이 클릭이 안돼요!</p>
+                <p style="color:red; font-weight:bold; font-size:1.6rem;">그리고 저 디자인에는 이렇게 코드를 작성하는게 맞을까요~??</p>
+                <div class="radio-type2">
+                    <input type="radio" name="radio" class="radio-type1" id="radio3-1">
+                    <label for="radio3-1"><input type="text" class="input-type2" value="Property Tour" readonly></label>
+                </div>
+            </div>
+
+            <h3>checkBox</h3>
+            
+            <h2>input</h2>
+            <input type="text" class="input-type1"><br/><br/>
+            <input type="text" class="input-type1" placeholder="placeholder"><br/><br/>
+            <div class="input-label-type1">
+                <label for="txt1-1">Name</label>
+                <input type="text" class="input-type1" id="txt1-1" placeholder="placeholder">
+            </div>
+            <br/><br/>
+            <h2>select</h2>
+            <select class="select-type1">
+                <option>Day</option>
+            </select>
+
+            <h2>select 그룹</h2>
+            <div class="select-group1">
+                <select class="select-type1">
+                    <option>Day</option>
+                </select>
+                <select class="select-type1">
+                    <option>Month</option>
+                </select>
+                <select class="select-type1">
+                    <option>Year</option>
+                </select>
+            </div>
+
+            <h2>textarea</h2>
+            <textarea class="textarea-type1" placeholder="placeholder"></textarea>
+        </div>
+    </details>
 </body>
 </html>
