--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>상태 :</li>
             <li><span class="state end"></span></li>
             <li>완료</li>
-            <li><span class="state"></span></li>
+            <li><span class="state ing"></span></li>
             <li>진행중&nbsp;&nbsp;&nbsp;/</li>
             <li><span class="state modify"></span></li>
             <li>수정</li>
@@ -51,12 +51,12 @@
               <td>스타일가이드</td>
               <td><a href="./style.html" target="_blank">style.html</a></td>
               <td>2024.08.10</td>
-              <td style="color:red;">이번주 과제!</td>
+              <td>2024.08.29</td>
               <td>O</td>
               <td>O</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state ing"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
@@ -66,28 +66,28 @@
             </tr>
             <tr class="list">
               <td>home</td>
-              <td><a href="" target="_blank">home.html</a></td>
-              <td>2024.00.00</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/home.html" target="_blank">home.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr class="list">
               <td>listing</td>
-              <td><a href="" target="_blank">listing.html</a></td>
-              <td>2024.00.00</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/listing.html" target="_blank">listing.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
@@ -159,42 +159,42 @@
             </tr>
             <tr class="list">
               <td>login</td>
-              <td><a href="" target="_blank">login.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/login.html" target="_blank">login.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr class="list">
               <td>register</td>
-              <td><a href="" target="_blank">register.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/register.html" target="_blank">register.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr class="list">
               <td>profile</td>
-              <td><a href="" target="_blank">profile.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/profile.html" target="_blank">profile.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
@@ -238,28 +238,28 @@
             </tr>
             <tr class="list">
               <td>description</td>
-              <td><a href="" target="_blank">description.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/description.html" target="_blank">description.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
             </tr>
             <tr class="list">
               <td>gallery</td>
-              <td><a href="" target="_blank">gallery.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/gallery.html" target="_blank">gallery.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
@@ -283,14 +283,14 @@
             </tr>
             <tr class="list">
               <td>select booking</td>
-              <td><a href="" target="_blank">selectBooking.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td><a href="/pages/booking.html" target="_blank">selectBooking.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
@@ -299,15 +299,15 @@
               <td class="category" colspan="10">property review</td>
             </tr>
             <tr class="list">
-              <td>propertyReview</td>
-              <td><a href="" target="_blank">propertyReview.html</a></td>
-              <td>2024.00.20</td>
-              <td>2024.00.00</td>
+              <td>Payment Methods</td>
+              <td><a href="/pages/paymentMethods.html" target="_blank">paymentMethods.html</a></td>
+              <td>2024.08.29</td>
+              <td>2024.08.29</td>
               <td>x</td>
               <td>x</td>
               <td>x</td>
               <td><span class="state m"></span></td>
-              <td><span class="state"></span></td>
+              <td><span class="state end"></span></td>
               <td>
                 <p class="t_em"></p>
               </td>
