진짜마지막

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </tr>
             <tr class="list">
               <td>home</td>
-              <td><a href="/pages/home.html" target="_blank">home.html</a></td>
+              <td><a href="pages/home.html" target="_blank">home.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -80,7 +80,7 @@
             </tr>
             <tr class="list">
               <td>listing</td>
-              <td><a href="/pages/listing.html" target="_blank">listing.html</a></td>
+              <td><a href="pages/listing.html" target="_blank">listing.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -159,7 +159,7 @@
             </tr>
             <tr class="list">
               <td>login</td>
-              <td><a href="/pages/login.html" target="_blank">login.html</a></td>
+              <td><a href="pages/login.html" target="_blank">login.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -173,7 +173,7 @@
             </tr>
             <tr class="list">
               <td>register</td>
-              <td><a href="/pages/register.html" target="_blank">register.html</a></td>
+              <td><a href="pages/register.html" target="_blank">register.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -187,7 +187,7 @@
             </tr>
             <tr class="list">
               <td>profile</td>
-              <td><a href="/pages/profile.html" target="_blank">profile.html</a></td>
+              <td><a href="pages/profile.html" target="_blank">profile.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -238,7 +238,7 @@
             </tr>
             <tr class="list">
               <td>description</td>
-              <td><a href="/pages/description.html" target="_blank">description.html</a></td>
+              <td><a href="pages/description.html" target="_blank">description.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -252,7 +252,7 @@
             </tr>
             <tr class="list">
               <td>gallery</td>
-              <td><a href="/pages/gallery.html" target="_blank">gallery.html</a></td>
+              <td><a href="pages/gallery.html" target="_blank">gallery.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -283,7 +283,7 @@
             </tr>
             <tr class="list">
               <td>select booking</td>
-              <td><a href="/pages/booking.html" target="_blank">selectBooking.html</a></td>
+              <td><a href="pages/booking.html" target="_blank">selectBooking.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
@@ -300,7 +300,7 @@
             </tr>
             <tr class="list">
               <td>Payment Methods</td>
-              <td><a href="/pages/paymentMethods.html" target="_blank">paymentMethods.html</a></td>
+              <td><a href="pages/paymentMethods.html" target="_blank">paymentMethods.html</a></td>
               <td>2024.08.29</td>
               <td>2024.08.29</td>
               <td>x</td>
